--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -53,7 +53,7 @@
  
       <ul class="navbar-nav ml-auto">
         <li class="nav-item2">
-          <a [hidden]="loggedOut()" class="nav-link" href="login" class="link3"><img id="bola"src="assets/bola.png" alt=""><span class="btn btn-info"  (click) ="logOut()">Sair </span></a>
+          <a [hidden]="loggedOut()" class="nav-link" href="login" class="link3"><img id="bola"src="assets/bola.png" alt="" (click) ="logOut()"  ><span class="btn btn-info"  (click) ="logOut()">Sair </span></a>
         </li>
       </ul>
 
