Adição página Listar produtos

--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -21,6 +21,7 @@
         </li>
        
       </ul>
+      
 
         <div class="search-container">
 
@@ -30,9 +31,17 @@
       </form>
       </div>
      
+        
+
       <ul class="navbar-nav ml-auto">
         <li class="nav-item2">
-          <a [hidden]="!isSeller()" class="nav-link" href="seller" class="link4"><img id="produto" src="assets/pipa.png" alt=""><span class="btn btn-info" >Cadastro de Produtos </span></a>
+          <a [hidden]="!isSeller()" class="nav-link" href="editProduct" class="link5"><img id="editar" src="assets/encaixe.png" alt=""><span class="btn btn-info" >Editar Produtos </span></a>
+        </li>
+      </ul>
+     
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item2">
+          <a [hidden]="!isSeller()" class="nav-link" href="seller" class="link4"><img id="pipa" src="assets/pipa.png" alt=""><span class="btn btn-info" >Cadastro de Produtos </span></a>
         </li>
       </ul>
 
