--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -21,14 +21,14 @@
 
 .link1{
   float: left;
-  margin-left: -340px;
+  margin-left: -200px;
  
   text-decoration: none;
   
 }
 .link2 {
   float: left;
-  margin-left: -10px;
+  margin-left: 70px;
   text-decoration: none;
   
 }
@@ -57,12 +57,22 @@
 
 #pipa{
   float: left;
-  margin-left: -65px;
+
 }
 .link4{
   
   float: left;
-  margin-left: -700px;
+  margin-left: -560px;
+ 
+  text-decoration: none;
+}
+
+
+
+.link5{
+  
+  float: left;
+  margin-left: -740px;
  
   text-decoration: none;
 }
@@ -71,7 +81,10 @@
   background-color: rgb(39, 143, 241);
 }
 
-
+#editar{
+  float: left;
+  margin-left: -65px;
+}
 
 
 
