atualização de icones e padronização da navbar.

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,19 @@
-
-.carousel-item{
+.corousel-slide {
   height: 450px;
   width: 100%;
-
 }
+
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-item {
+  height: 450px;
+  width: 100%;
+}
+
+.button {
+  background-color: #4CAF50;
+}
+
