--- a/src/app/private/edit-product/edit-product.component.html
+++ b/src/app/private/edit-product/edit-product.component.html
@@ -61,7 +61,7 @@
                         </a>
                  &nbsp;
               
-                        <a   routerLink="product/edit/{{product.id}}" class="btn btn-sm btn-warning">
+                        <a   href="../alteraProduct/{{product.id}}" class="btn btn-sm btn-warning">
    
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
            
