--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,29 +1,29 @@
-
-
 <app-layout></app-layout>
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="2000">
-        <img src="assets/carrousel1.png" class="d-block w-100" alt="...">
+  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img src="assets/homiranha.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="assets/boneca.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="20000">
+          <img src="assets/carrousel2.png" class="d-block w-100" alt="...">
+        </div>
       </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="assets/carrousel2.png" class="d-block w-100" alt="...">
+      <div class="controls">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <div class="carousel-item" data-bs-interval="20000">
-        <img src="assets/homiranha.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
-<h1 class="p-3 text-center">
-   
-<div [@fadeIn]>  Seja bem-vindo(a) {{name}} !</div>
-</h1>
+  <h1 class="p-3 text-center">
+    
+  <div [@fadeIn]>  Seja bem-vindo(a) {{name}} !</div>
+  </h1>
 
