--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -1,6 +1,6 @@
 #nav {
 
-    background-color: #8bb9e2;
+    background-color: #58b1ff;
     top: 0;
     width: 100%;
     z-index: 4;
@@ -136,10 +136,10 @@
 }
 
 .btn-info{
-  background-color:  #8bb9e2;
+  background-color:  #58b1ff;
   color: aliceblue;
   font-size: 22px;
-  border: #8bb9e2;
+  border: #58b1ff;
 }
 
 #pipa{
