--- a/src/app/private/edit-product/edit-product.component.html
+++ b/src/app/private/edit-product/edit-product.component.html
@@ -1,23 +1,23 @@
 <nav class="navbar">
-    
-      <div class="nav navbar-nav mx-auto" id="navbarTogglerDemo01">
+    <div class="nav navbar-nav mx-auto" id="navbarTogglerDemo01">
         <a class="navbar-brand" href="home"><img src="assets/icon.png" alt=""></a>
-      </div>
-    
-  </nav>
+    </div>
+</nav>
     
   <div class="gradient-background">
     <div class="container">
         <div id="tabela" class="mt-3 mb-3 p-3 card shadow">
-             <h2>Tabela de Produtos</h2>  
-
+            <div class="d-flex justify-content-between">
+                <h2>Atualizar Produto</h2>  
+                <button class="btn btn-sm btn-secondary" routerLink="/home"> Voltar</button>   
+            </div> 
      <div class="table-reponsive">
         <table class="table">
             <thead>
                 <tr>
-                   <th>Nome do Produto</th>
-                <th>Categoria</th>
-                <th>Valor do Produto</th>
+                    <th>Nome do Produto</th>
+                    <th>Categoria</th>
+                    <th>Valor do Produto</th>
                 <th> 
                     Ação &nbsp;
                     <button class="btn btn-sm btn success">
