--- a/src/app/private/alterar-product/alterar-product.component.scss
+++ b/src/app/private/alterar-product/alterar-product.component.scss
@@ -1,21 +1,26 @@
 .navbar {
-    background-color: #8bb9e2;
-    top: 0;
-    width:100;
-    z-index: 1;
-  }
+  background-color: #58b1ff;
+}
 
+.navbar-brand img {
+  width: 80px;
+}
 
-  .gradient-background {
-    width: 100%;
-    
-    height: 100vh;
-    background: linear-gradient(to top, #1b0222, #00198b);
-    //background: linear-gradient(to bottom, #ff0000, #0000ff);
-  }
+.table tr td {
+  background-color: rgb(241, 241, 241);
+}
 
-  .card.shadow {
-    width: 80%;;
-    position:absolute;
-    font-size: 20px;
-  }
+.table tr th {
+  background-color: rgb(241, 241, 241);
+}
+
+.mt-3.mb-3.p-3.card.shadow {
+  background-color: rgb(241, 241, 241);
+}
+
+.card.shadow {
+  width: 100%;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+}
