--- a/src/app/private/seller/seller.component.html
+++ b/src/app/private/seller/seller.component.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar">
     <div class="container">
       <div class="nav navbar-nav mx-auto" id="navbarTogglerDemo01">
@@ -6,45 +5,32 @@
       </div>
     </div>
   </nav>
-  
-  
-  <div>
-    <div class="image-container">
-      <img src="assets/backgroundpic.png" id="background" alt="kids">
-      
-      
-  
-  
-        <div class="form-container">
-        
-         <div class="card shadow round mt-6">
-          <div class="class-header">
-            <h3 class="text-center">Cadastro de Produto</h3>
-  
-          </div>
-         </div>
+
+  <div class="container">
+    <div id="tabela" class="mt-3 mb-3 p-3 card shadow"> 
+      <div class="d-flex justify-content-between">
+        <h2>Cadastrar Produto</h2>  
+        <button class="btn btn-sm btn-secondary" routerLink="/home">Voltar</button>   
+      </div>
+      <br>
          <div class="card-body">
     <form [formGroup] = "formCadastroProduto">
       <hr>
         <div class="mb-3">
           <label for="InputName" class="form-label">Nome do Produto:</label>
-            <input type="text" [(ngModel)]="name" class="form-control" id="InputName" aria-describedby="" formControlName="name" placeholder="Nome">
+          <input type="text" [(ngModel)]="name" class="form-control" id="InputName" aria-describedby="" formControlName="name" placeholder="Nome">
           <div class="form-text text-danger" *ngIf="formCadastroProduto.controls['name'].errors?.['required']"> O nome é obrigatório</div>
-          <div class="form-text text-danger" *ngIf="formCadastroProduto.controls['name'].errors?.['minlength']"> O nome deve ter ao menos três caracteres</div>
-         
+          <div class="form-text text-danger" *ngIf="formCadastroProduto.controls['name'].errors?.['minlength']"> O nome deve ter ao menos três caracteres</div>        
         </div>
-
         <div class="mb-3">
           <label for="InputCategoria" class="form-label">Categoria:</label>
-         <select class="form-select form-control" [(ngModel)]="category" formControlName="category" aria-label="Default select example">
-          
-         
-          <option value="Bonecos">Bonecos</option>
-          <option value="Jogos de Tabuleiro">Jogos de Tabuleiro</option>
-          <option value="Carrinhos">Carrinhos</option>
-          <option value="Instrumentos Musicais">Instrumentos Musicais</option>
-          <option value="Esportes">Esportes</option>
-        </select>
+          <select class="form-select form-control" [(ngModel)]="category" formControlName="category" aria-label="Default select example">         
+            <option value="Bonecos">Bonecos</option>
+            <option value="Jogos de Tabuleiro">Jogos de Tabuleiro</option>
+            <option value="Carrinhos">Carrinhos</option>
+            <option value="Instrumentos Musicais">Instrumentos Musicais</option>
+            <option value="Esportes">Esportes</option>
+          </select>
         <div class="form-text text-danger" *ngIf="formCadastroProduto.controls['category'].errors?.['required']">A categoria é obrigatória</div>
          
         </div>
@@ -80,21 +66,9 @@
           <div class="form-text text-danger" *ngIf="formCadastroProduto.controls['imageLink'].errors?.['required']"> A imagem é obrigatória</div>
           
         </div>
-
-
-
-
-        
-       
-        
-        
-        
-        <button type="submit" class="btn btn-primary" [disabled]="!formCadastroProduto.valid" (click)="save()" >Cadastrar</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!formCadastroProduto.valid" (click)="save()">Cadastrar</button>
       </form>
-         </div>
-         
-        
-      </div>
+    </div>
       
       
       
