--- a/src/app/private/seller/seller.component.scss
+++ b/src/app/private/seller/seller.component.scss
@@ -1,54 +1,32 @@
 .navbar {
-    background-color: #8bb9e2;
-    top: 0;
-    width:100;
-    z-index: 1;
-  }
-  
-  
-.image-container {
-  
-    /* Subtracting navbar height */
-   background-size: cover;
-   background-position: center;
-   display: flex;
-   align-items: center;
-   justify-content: center;
- 
- 
- }
- .image-container img{
-   width: 100%;
-   height:150vh;
-   display: block;
- 
- }
- 
- .form-container {
-   position: absolute;
-   top: 80%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   background-color: rgba(172, 185, 196, 0.8);
-   padding: 50px;
- }
- .class-header{
-   margin-top: -20px;
-   
-   background-color: #8bb9e2;
-   padding: 10px;
- }
- .text-center{
-   color: white;
-   font-size:40px;
- }
- 
- ::placeholder {
-   color: gray;
- }
- 
- .form-label{
+  background-color: #58b1ff;
+  width:100;
+  z-index: 1;
+}
+
+.navbar-brand img {
+  max-width: 80px;
+}
+
+.table tr td {
+  background-color: rgb(241, 241, 241);
+}
+
+.table tr th {
+  background-color: rgb(241, 241, 241);
+}
+
+.mt-3.mb-3.p-3.card.shadow {
+  background-color: rgb(241, 241, 241);
+}
+
+.mb-3 button {
+  float: right;
+}
+
+.card.shadow {
+  width: 100%;
   font-size: 20px;
-  font-family:'Segoe UI';
-  color: #010407;
- }
+  display: flex;
+  justify-content: center;
+}
