commit atualização home.

--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -27,13 +27,22 @@
       </ul>
 
       <ul class="navbar-nav ml-auto">
-          <li class="nav-item1">
-  <a  [hidden]="isSeller()" class="nav-link    "href="carrinho" class="link1">
-    <img id="trem" src="assets/trem.png" alt="">
-    <span class="btn btn-info" routerLink="/carrinho"> Minhas compras </span>
-  </a>
-   </li> 
-    </ul>
+        <li class="nav-item1">
+          <a [hidden]="!isClient()" class="nav-link" href="carrinho" class="link1">
+            <img id="trem" src="assets/trem.png" alt="">
+            <span class="btn btn-info" routerLink="/carrinho"> Minhas compras </span>
+          </a>
+        </li> 
+      </ul>
+
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item1">
+          <a [hidden]="!isSeller()" class="nav-link "href="carrinho" class="link1">
+            <img id="trem" src="assets/trem.png" alt="">
+            <span class="btn btn-info" routerLink="/carrinho"> Listar vendas </span>
+          </a>
+        </li> 
+      </ul>
 
       <ul  [hidden]="!loggedOut()"  class="navbar-nav ml-auto">
         <li class="nav-item2">
