--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-layout></app-layout>
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+  <div [hidden]="!isClient()" [hidden]="!notLogged()" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
           <img src="assets/homiranha.png" class="d-block w-100" alt="...">
@@ -23,7 +23,31 @@
       </div>
   </div>
   <h1 class="p-3 text-center">
-    
-  <div [@fadeIn]>  Seja bem-vindo(a) {{name}} !</div>
+    <div [@fadeIn]>Seja bem-vindo(a), {{name}}!</div>
   </h1>
 
+  <div class="gradient-background">
+    <div class="container">
+        <div id="tabela" class="mt-3 mb-3 p-3 card shadow">
+            <div class="d-flex justify-content-between">
+                <h2>Editar Produto</h2>  
+                <button class="btn btn-sm btn-secondary" routerLink="/home"> Voltar</button>   
+            </div> 
+     <div class="table-reponsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Nome do Produto</th>
+                    <th>Categoria</th>
+                    <th>Valor do Produto</th>
+                <th> 
+                </th> 
+                </tr>
+                
+            </thead>
+
+        </table>
+     </div>
+    </div>
+    </div>
+    </div>
