implementação de produtos na home

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -32,7 +32,7 @@
           
         
         
-        <div class="form-text text-danger" *ngIf="isFormControlInvalid('email')">O nome de usuário deve conter pelo menos 6 caracteres</div>
+        <div class="form-text text-danger" *ngIf="isFormControlInvalid('email')">O nome de usuário deve conter pelo menos 6 caracteres e estar no formato de e-mail</div>
       
       </div>
 
