--- a/src/app/private/seller/seller.component.html
+++ b/src/app/private/seller/seller.component.html
@@ -30,6 +30,8 @@
             <option value="Carrinhos">Carrinhos</option>
             <option value="Instrumentos Musicais">Instrumentos Musicais</option>
             <option value="Esportes">Esportes</option>
+            <option value="Esportes">Cartas</option>
+            
           </select>
         <div class="form-text text-danger" *ngIf="formCadastroProduto.controls['category'].errors?.['required']">A categoria é obrigatória</div>
          
