--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,3 +27,51 @@
   <div [@fadeIn]>  Seja bem-vindo(a) {{name}} !</div>
   </h1>
 
+  <section id="product">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="productHeading text-center">
+                    <h2 class="mb-3">Exclusive Products</h2> 
+                    <ul class="list-unstyled d-flex   justify-content-center ">
+                        <li><a href="#" class=" m-4  text-decoration-none text-danger fw-semibold  ">New Arrival</a></li>
+                        <li><a href="#" class=" m-4  text-decoration-none fw-semibold text-black">Best Sellers</a></li>
+                        <li><a href="#" class=" m-4  text-decoration-none fw-semibold text-black">Featured</a></li>
+                        <li><a href="#" class=" m-4  text-decoration-none fw-semibold text-black ">Special Offer</a></li>
+                    </ul>  
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="row mt-3">
+                    <div class="col-lg-3 pt-1" *ngFor="let product of productList">
+                        <div class="box-shadow">
+                            <div class="card">
+                                <img class="img-fluid" style="height: 200px;" [src]="product.imageLink" class="card-img-top"
+                                    alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{product.name}}</h5>
+                                    <p class="card-text"><span
+                                            class="text-danger fw-semibold me-2">R${{product.value}}</span><del> R${{product.value}}</del>
+                                        <span class="text-success ms-2">15% de Desconto</span></p>
+                                     
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <i class="fa-solid fa-star-half-stroke  m-0"
+                                                style="color: #f1f50f;"></i> 
+                                                <span class="text-muted">(21)</span>
+                                        </div>
+                                        <div class="col-6 text-end">
+                                            <button class="btn btn-sm btn-success" > Adicionar ao Carrinho</button>
+                                        </div>
+                                    </div>
+                                   
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
