--- a/src/app/private/edit-product/edit-product.component.html
+++ b/src/app/private/edit-product/edit-product.component.html
@@ -20,9 +20,9 @@
                     <th>Valor do Produto</th>
                 <th> 
                     Ação &nbsp;
-                    <button class="btn btn-sm btn success">
+                    
                          
-                    <button type="button" class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#addNewClient">    
+                    <a type="buttom" class="btn btn-sm btn-success" href="../seller" data-bs-toggle="modal"  >    
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-plus" viewBox="0 0 16 16">        
                             <path         
@@ -30,15 +30,15 @@
      
                         </svg>
 
-                              </button>
-                    </button>
+                              </a>
+                    
                 </th> 
                 </tr>
                 
             </thead>
             <tbody *ngFor="let product of listProducts">
                 <tr>
-                    <td>{{product.description}}</td>
+                    <td>{{product.name}}</td>
                     <td>{{product.category}}</td>
                     <td>{{product.value}}</td>
                     <td>
