--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -13,7 +13,7 @@
 }
 
 .search-container button {
-  background-color: rgb(39, 143, 241);
+  background-color: #278ff1;
   border: none;
   color: white;
 }
