--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -30,7 +30,16 @@
         <li class="nav-item1">
           <a [hidden]="!isClient()" class="nav-link" href="carrinho" class="link1">
             <img id="trem" src="assets/trem.png" alt="">
-            <span class="btn btn-info" routerLink="/carrinho"> Minhas compras </span>
+            <span class="btn btn-info" routerLink="/carrinho"> Meu carrinho </span>
+          </a>
+        </li> 
+      </ul>
+
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item1">
+          <a [hidden]="!isClient()" class="nav-link" href="perfil" class="link1">
+            <img id="trem" src="assets/do-utilizador.png" alt="">
+            <span class="btn btn-info" routerLink="/carrinho"> {{name}} </span>
           </a>
         </li> 
       </ul>
@@ -44,9 +53,9 @@
         </li> 
       </ul>
 
-      <ul  [hidden]="!loggedOut()"  class="navbar-nav ml-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item2">
-          <a  class="nav-link" href="login" class="link2"><img id="peca"src="assets/peca.png" alt=""><span class="btn btn-info"> Entre ou cadastre-se </span></a>
+          <a [hidden]="!loggedOut()" class="nav-link" href="login" class="link2"><img id="peca"src="assets/peca.png" alt=""><span class="btn btn-info"> Entre ou cadastre-se </span></a>
         </li>
       </ul>
  
@@ -54,25 +63,8 @@
         <li class="nav-item2">
           <a [hidden]="loggedOut()" class="nav-link" href="login" class="link3"><img id="bola"src="assets/logout.png" alt="" (click) ="logOut()"  ><span class="btn btn-info"  (click) ="logOut()"> Sair </span></a>
         </li>
-      </ul>
-
-
-
-      
-<!-- 
- 
-     
-  <li class="nav-item1">
-          <a class="nav-link" href="carrinho" class="link1"><img id="trem"src="assets/trem.png" alt="">
-            <h4>Carrinho de compras </h4>
-          </a>
-        </li>
--->
-
-
-     
-        
-      </div>
+      </ul>    
+    </div>
   </div>
 </nav>
 
