modificações básicas e testes.

--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -38,8 +38,8 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item1">
           <a [hidden]="!isClient()" class="nav-link" href="perfil" class="link1">
-            <img id="trem" src="assets/do-utilizador.png" alt="">
-            <span class="btn btn-info" routerLink="/carrinho"> {{name}} </span>
+            <img id="perfil" src="assets/do-utilizador.png" alt="">
+            <span class="btn btn-info" routerLink="/meuPerfil"> {{name}} </span>
           </a>
         </li> 
       </ul>
