--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <app-layout></app-layout>
-  <div [hidden]="!isClient()" [hidden]="!notLogged()" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+  <div [hidden]="!isClient()" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
           <img src="assets/homiranha.png" class="d-block w-100" alt="...">
@@ -96,7 +96,6 @@
                                               class="text-danger fw-semibold me-2">R${{product.value}}</span>
                                       </p>
                                       <div class="row">
-                                          
                                           <div class="col-6 text-end">
                                               <button class="btn btn-sm btn-success" > Adicionar ao Carrinho</button>
                                           </div>
@@ -142,60 +141,5 @@
             </div>
         </div>
     </div>
-</section>
-
-
-
-
-
-  
-  
-  <section id="product">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="productHeading text-center">
-                    <h2 class="mb-3">Exclusive Products</h2> 
-                    <ul class="list-unstyled d-flex   justify-content-center ">
-                        <li><a href="#" class=" m-4  text-decoration-none text-danger fw-semibold  ">New Arrival</a></li>
-                        <li><a href="#" class=" m-4  text-decoration-none fw-semibold text-black">Best Sellers</a></li>
-                        <li><a href="#" class=" m-4  text-decoration-none fw-semibold text-black">Featured</a></li>
-                        <li><a href="#" class=" m-4  text-decoration-none fw-semibold text-black ">Special Offer</a></li>
-                    </ul>  
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="row mt-3">
-                    <div class="col-lg-3 pt-1" *ngFor="let product of productList">
-                        <div class="box-shadow">
-                            <div class="card">
-                                <img class="img-fluid" style="height: 200px;" [src]="product.imageLink" class="card-img-top"
-                                    alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{product.name}}</h5>
-                                    <p class="card-text"><span
-                                            class="text-danger fw-semibold me-2">R${{product.value}}</span><del> R${{product.value}}</del>
-                                        <span class="text-success ms-2">15% de Desconto</span></p>
-                                     
-                                    <div class="row">
-                                        <div class="col-6">
-                                            <i class="fa-solid fa-star-half-stroke  m-0"
-                                                style="color: #f1f50f;"></i> 
-                                                <span class="text-muted">(21)</span>
-                                        </div>
-                                        <div class="col-6 text-end">
-                                            <button class="btn btn-sm btn-success" > Adicionar ao Carrinho</button>
-                                        </div>
-                                    </div>
-                                   
-                                </div>
-                            </div>
-                        </div>
-                    </div> 
-                </div>
-            </div>
-        </div>
-    </div>
-
-</section>
+</section>  
  
