--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -28,7 +28,7 @@
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item1">
-          <a [hidden]="!isClient()" class="nav-link" href="carrinho" class="link1">
+          <a [hidden]="!isClient() && !notLogged()" class="nav-link" href="carrinho" class="link1">
             <img id="trem" src="assets/trem.png" alt="">
             <span class="btn btn-info" routerLink="/carrinho"> Meu carrinho </span>
           </a>
