--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -55,6 +55,18 @@
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item2">
+          <a [hidden]="!isManeger()" class="nav-link" href="cadastrarVendedor" class="link4"><img id="cadastrar" src="assets/lapis.png" alt=""><span class="btn btn-info" >Cadastrar Vendedor </span></a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item2">
+          <a [hidden]="!isManeger()" class="nav-link" href="visualizarVendedor" class="link1"><img id="editar" src="assets/lapis.png" alt=""><span class="btn btn-info" >Visualizar Vendedores </span></a>
+        </li>
+      </ul>
+
+
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item2">
           <a [hidden]="!loggedOut()" class="nav-link" href="login" class="link2"><img id="peca"src="assets/peca.png" alt=""><span class="btn btn-info"> Entre ou cadastre-se </span></a>
         </li>
       </ul>
