--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <app-layout></app-layout>
+<div class="background">
   <div [hidden]="!isClient() && !notLogged()" id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
@@ -22,9 +23,7 @@
         </button>
       </div>
   </div>
-
-
-
+</div>
   <div [hidden]="!isSeller()" class="gradient-background">
     <div class="container">
       <div id="card" class="mt-3 mb-3 p-3 card shadow">
@@ -58,6 +57,13 @@
       </div>
     </div>
   </div>
+
+  <div class="local">
+    <div class="line">
+    <div class="name"> PRODUTOS EM DESTAQUE </div>
+    </div>
+  </div>
+
   <section [hidden]="!isClient() && !notLogged()" id="product">
       <div class="container">
           <div class="row">
