--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   margin: 0 auto;
   margin-top: 10px;
+  border-radius: 10px;
 }
 
 .carousel-inner img {
@@ -44,5 +45,37 @@
 .card {
   background-color: rgb(241, 241, 241);
 }
+
+.local {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+}
+
+.line {
+  width: 100%;
+  height: 300px;
+  background-color: rgb(241, 241, 241);
+  margin-bottom: 20px;
+}
+
+.name {
+  margin-top: 10px;
+  font-size: 35px;
+  font-weight: bold;
+  color: #324657;
+  display: flex;
+  justify-content: center;
+}
+
+.background {
+  background-color: rgb(241, 241, 241);
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 70px;
+}
+
 
 
